@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fixed an issue with concurrent INSERT requests that could fail due to using
+   a shared state internally.
+
  - COPY FROM / COPY TO will now automatically create a quoted URI if only a
    path is given.
 
